@@ -7,6 +7,7 @@ X   X
     * Add Chestplate + Respiration = fish mode (no damage in water)
     * Add Leggings + Knockback = tackle (more damage when sprinting)
     * Add support for custom items from PlasticCraft, Forestry, Mo' Foods mods in default config
+    * Enhance Hoe + Fire Protection = sensor, now also displays player information
     * Fix Sword + Silk Touch = capture creating invalid spawn eggs on non-standard mobs
 
 2012-02-25  0.7.5
